# ssss-paper-code

./: Cargo.toml  LICENSE  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: perf.rs
benchmarks/src/: accuracy.rs  algo.rs  data.rs  dataset.rs  exact.rs  lib.rs  main.rs  memory.rs
benchmarks/src/data/: mod.rs  synth.rs
count_hll/: Cargo.toml
count_hll/proptest-regressions/: lib.txt
count_hll/src/: config.rs  dist.rs  invertible.rs  labels.rs~  lib.rs
hll/: Cargo.toml
hll/proptest-regressions/: lib.txt
hll/src/: Cargo.toml~  config.rs  hll.rs~  integer_ln.rs~  lib.rs  linear_counting.rs  linear_counting.rs~
sketch_traits/: Cargo.toml
sketch_traits/src/: lib.rs
spread/: Cargo.toml
spread/src/: config.rs  lib.rs
sss/: Cargo.toml
sss/src/: cached.rs  config.rs  counter.rs  lib.rs
ssss/: Cargo.toml
ssss/src/: config.rs  lib.rs
