[package]
name = "count_hll"
version = "0.1.0"
authors = ["homin@datadoghq.com", "charles@datadoghq.com"]
edition = "2021"

[dependencies]
hll = { version = "0.1.0", path = "../hll" }
sketch_traits = { version = "0.1.0", path = "../sketch_traits" }

ahash = { version = "0.8.3", default-features = false }
itertools = { version = "0.10.5", default-features = true }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
proptest = { version = "1.0.0" }

[lib]
doctest = false
bench = false

[features]
default = []
dbg = []
