[package]
name = "spread"
version = "0.1.0"
authors = ["homin@datadoghq.com", "charles@datadoghq.com"]
edition = "2021"

[dependencies]
sketch_traits = { version = "0.1.0", path = "../sketch_traits" }
hll = { version = "0.1.0", path = "../hll" }

ahash = { version = "0.8.3", default-features = false }
itertools = { version = "0.10.5", default-features = true }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[lib]
doctest = false
bench = false
